Fix line break in automation analytics separator
[MAILPOET-5702]

--- a/mailpoet/assets/css/src/components-automation-editor/_separator.scss
+++ b/mailpoet/assets/css/src/components-automation-editor/_separator.scss
@@ -7,6 +7,7 @@ $separator-width: 1px;
   height: 64px;
   justify-content: center;
   margin: auto;
+  white-space: nowrap;
   width: $separator-width;
 }
 
